Update benchmarking docs and add an initial ChampHashSet benchmark based on the Strawman version